--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ gunicorn==22.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
-mysqlclient==2.2.4
 packaging==24.1
+PyMySQL==1.1.1
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
